<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_project">

    <fragment
        android:id="@+id/nav_project"
        android:name="ru.techpark.gtdify.view.fragments.InBoxFragment"
        android:label="@string/inbox"
        tools:layout="@layout/project_fragment"/>

    <fragment
        android:id="@+id/nav_today"
        android:name="ru.techpark.gtdify.view.fragments.TodayFragment"
        android:label="@string/today"
        tools:layout="@layout/today_fragment"/>

    <fragment
        android:id="@+id/nav_trash_bin"
        android:name="ru.techpark.gtdify.view.fragments.TrashBinFragment"
        android:label="@string/trash_bin"
        tools:layout="@layout/trash_bin_fragment" />

</navigation>